--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Elocution'
 - !lcc 'PN'
+- GITenberg
 title: "The Canadian Elocutionist\r\nDesigned for the Use of Colleges, Schools and\
   \ Self Instruction, Together with a Copious Selection in Prose and Poetry of Pieces\
   \ Adapted for Reading, Recitation and Practice"
